Adding My SQL dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/timeline
+spring.datasource.username=root
+spring.datasource.password=
